--- a/public/pages/productinfo.ejs
+++ b/public/pages/productinfo.ejs
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product Info | Amazon</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="../css/styles.css" />
-  </head>
-  <style>
-    /*.btn{
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Product Info | Amazon</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../css/styles.css" />
+</head>
+<style>
+  /*.btn{
       font-size: 13px;
       color: #0891b2;
       padding: 10px 18px;
@@ -47,157 +44,233 @@
         font-weight: bold;
       }*/
 
-      .price-compare {
-        color: rgba(0, 0, 0, 0.5);
-        font-size: 14px;
-        text-decoration: line-through;
-      }
-      /* Basic Styling */
-      html,
-      body {
-        height: 100%;
-        width: 100%;
-        margin: 0;
-        font-family: "Roboto", sans-serif;
-      }
+  .price-compare {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 14px;
+    text-decoration: line-through;
+  }
 
-      .container_info {
-        max-width: 1200px;
-        margin: 0 auto;
-        margin-bottom: 500px;
-        padding: 15px;
-        display: flex;
-      }
+  /* Basic Styling */
+  html,
+  body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    font-family: "Roboto", sans-serif;
+  }
 
-      /* Columns */
-      .left-column {
-        width: 65%;
-        position: relative;
-      }
+  .container_info {
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    padding: 15px;
+    display: flex;
+  }
 
-      .right-column {
-        width: 35%;
-        margin-top: 60px;
-      }
+  /* Columns */
+  .left-column {
+    width: 65%;
+    position: relative;
+  }
 
-      /* Left Column */
-      .left-column img {
-        width: 100%; /* Set the width to 100% */
-        height: auto; /* Maintain the aspect ratio */
-        max-width: 700px; /* Set a maximum width if needed */
-        position: absolute;
-        left: 0;
-        top: 0;
-        opacity: 0;
-        transition: all 0.3s ease;
-      }
+  .right-column {
+    width: 35%;
+    margin-top: 60px;
+  }
 
-      .left-column img.active {
-        opacity: 1;
-      }
+  /* Left Column */
+  .left-column img {
+    width: 100%;
+    /* Set the width to 100% */
+    height: auto;
+    /* Maintain the aspect ratio */
+    max-width: 700px;
+    /* Set a maximum width if needed */
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    transition: all 0.3s ease;
+  }
 
-      /* Right Column */
+  .left-column img.active {
+    opacity: 1;
+  }
 
-      /* Product Description */
-      .product-description {
-        border-bottom: 1px solid #e1e8ee;
-        margin-bottom: 20px;
-      }
-      .product-description span,
-      .product-description span a {
-        font-size: 12px;
-        color: #358ed7;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        text-decoration: none;
-      }
-      .product-description h1 {
-        font-weight: 300;
-        font-size: 52px;
-        color: #43484d;
-        letter-spacing: -2px;
-      }
-      .product-description p {
-        font-size: 16px;
-        font-weight: 300;
-        color: #86939e;
-        line-height: 24px;
-      }
+  /* Right Column */
 
-      /* Product Price */
-      .product-price {
-        display: flex;
-        align-items: center;
-      }
+  /* Product Description */
+  .product-description {
+    border-bottom: 1px solid #e1e8ee;
+    margin-bottom: 20px;
+  }
 
-      .product-price span {
-        font-size: 18px;
-        font-weight: 300;
-        color: #43474d;
-        margin-right: 20px;
-        margin-left: 10px;
-      }
+  .product-description span,
+  .product-description span a {
+    font-size: 12px;
+    color: #358ed7;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
 
-      .cart-btn {
-        margin-top: 10px;
-        display: inline-block;
-        background-color: #0891b2;
-        border-radius: 6px;
-        font-size: 16px;
-        color: #ffffff;
-        text-decoration: none;
-        padding: 12px 30px;
-        transition: all 0.5s;
-      }
-      .cart-btn:hover {
-        background-color: #0891b2;
-      }
+  .product-description h1 {
+    font-weight: 300;
+    font-size: 52px;
+    color: #43484d;
+    letter-spacing: -2px;
+  }
 
-      .left-column,
-      .right-column {
-        margin-right: 5px;
-        margin-left: 5px;
-      }
+  .product-description p {
+    font-size: 16px;
+    font-weight: 300;
+    color: #86939e;
+    line-height: 24px;
+  }
 
-      /* Responsive */
+  /* Product Price */
+  .product-price {
+    display: flex;
+    align-items: center;
+  }
 
-      /* Laptop / Desktops */
-      @media (min-width: 941px) {
-        .paddinglol {
-          padding: 300px;
-        }
-      }
+  .product-price span {
+    font-size: 18px;
+    font-weight: 300;
+    color: #43474d;
+    margin-right: 20px;
+    margin-left: 10px;
+  }
 
-      /* mobiles */
-      @media (max-width: 940px) {
-        .container {
-          flex-direction: column;
-        }
-        .left-column,
-        .right-column {
-          width: 100%;
-        }
+  .cart-btn {
+    margin-top: 10px;
+    display: inline-block;
+    background-color: #0891b2;
+    border-radius: 6px;
+    font-size: 16px;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 12px 30px;
+    transition: all 0.5s;
+  }
 
-        .left-column img {
-          width: 300px;
-          right: 0;
-          top: 50px;
-          left: initial;
-        }
-      }
+  .cart-btn:hover {
+    background-color: #0891b2;
+  }
 
-      @media (max-width: 535px) {
-        .left-column img {
-          width: 220px;
-          top: 50px;
-        }
-      }
-      
+  .left-column,
+  .right-column {
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+
+  /* Responsive */
+
+  /* Laptop / Desktops */
+  @media (min-width: 941px) {
+    .paddinglol {
+      padding: 300px;
+    }
+  }
+
+  /* mobiles */
+  @media (max-width: 940px) {
+    .container {
+      flex-direction: column;
+    }
+
+    .left-column,
+    .right-column {
+      width: 100%;
+    }
+
+    .left-column img {
+      width: 300px;
+      right: 0;
+      top: 50px;
+      left: initial;
+    }
+  }
+
+  @media (max-width: 535px) {
+    .left-column img {
+      width: 220px;
+      top: 50px;
+    }
+  }
+
+  .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
-      
-  </style>
-  <body>
-    <%- navbar %>
+  }
+
+  .comment{
+    background: #f5f5f5;
+    padding: 2rem;
+    max-width: 670px;
+    width: 100%;
+    border-radius: .75rem;
+    
+  }
+  .comment h3{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+  }
+
+  textarea{
+    width: 95%;
+    background: white;
+    padding: 1rem;
+    border-radius: .5rem;
+    border: none;
+    outline: none;
+    resize: none;
+    margin-bottom: .5rem;
+  }
+
+  .btn-group{
+    display: flex;
+    grid-gap: .5rem;
+    align-items: center;
+  }
+
+  .btn-group .btn{
+    padding: .75rem 1rem;
+    border-radius: .5rem;
+    border: none;
+    outline: none;
+    font-size: .875rem;
+    font-weight: 500;
+  }
+
+  .btn-group .btn-submit{
+    background: #0891b2;
+    color: white;
+  }
+  
+  .btn-group .btn-submit:hover{
+    background: #066d87;
+    color: rgb(208, 206, 206);
+    cursor: pointer;
+  }
+
+  .btn-group .btn-cancel{
+    color: #0891b2;
+    background: white;
+  }
+
+  .btn-group .btn-cancel:hover{
+    background: rgb(208, 206, 206);
+    color: #066d87;
+    cursor: pointer;
+  }
+</style>
+
+<body>
+  <%- navbar %>
 
     <!--<div class="container">
       <div class="small-container single-product">
@@ -226,27 +299,16 @@
     <section class="container_info">
       <!-- Left Column / Headphones Image -->
       <div class="left-column">
-        <img
-          data-image="og_image"
-          class="active"
-          src="<%- product.image %>"
-          alt=""
-          style="width: 60%; height: 440px; padding-top: 40px;"
-        />
+        <img data-image="og_image" class="active" src="<%- product.image %>" alt=""
+          style="width: 60%; height: 440px; padding-top: 40px;" />
       </div>
 
       <div class="right-column">
         <div class="product-description">
           <span>
-            <a href="/<%- product.type %>" style="display: inline"
-              ><%- product.type %></a
-            >
+            <a href="/<%- product.type %>" style="display: inline"><%- product.type %></a>
             /
-            <a
-              href="/<%- product.type %>/<%- product.category %>"
-              style="display: inline"
-              ><%- product.category %></a
-            >
+            <a href="/<%- product.type %>/<%- product.category %>" style="display: inline"><%- product.category %></a>
             / <%- product.name %>
           </span>
           <h1><%- product.name %></h1>
@@ -266,5 +328,18 @@
         </div>
       </div>
     </section>
-  </body>
+
+    <div class="wrapper">
+      <div class="comment">
+        <h3>Review this product</h3>
+        <textarea name="opinion" cols="30" rows="7" placeholder="Share your thoughts with other customers"></textarea>
+        <div class="btn-group">
+          <button type="submit" class="btn btn-submit">Submit</button>
+          <button class="btn btn-cancel">Cancel</button>
+        </div>
+      </div>
+
+    </div>
+</body>
+
 </html>
