--- a/public/pages/productinfo.ejs
+++ b/public/pages/productinfo.ejs
@@ -1,314 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product Info | Amazon</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Product Info | Amazon</title>
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="../css/styles.css" />
-</head>
-<style>
-  /*.btn{
-      font-size: 13px;
-      color: #0891b2;
-      padding: 10px 18px;
-      font-weight: 900;
-      border: 1px solid #0891b2;
-      border-radius: 20px;
-      text-decoration: none;
-    }
-
-    .btn:hover {
-      cursor: pointer;
-      background-color: #0891b2;
-      color: white;
-    }
-
-      .single-product{
-        margin-top: 80px;
-        padding: 80px;
-      }
-
-    .single-product .col-2 img {
-      padding: 20px;
-      height: 50%;
-    }
-
-      .single-product h4{
-        margin: 20px 0;
-        font-size: 22px;
-        font-weight: bold;
-      }*/
-
-  .price-compare {
-    color: rgba(0, 0, 0, 0.5);
-    font-size: 14px;
-    text-decoration: line-through;
-  }
-
-  /* Basic Styling */
-  html,
-  body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    font-family: "Roboto", sans-serif;
-  }
-
-  .container_info {
-    max-width: 1200px;
-    margin: 0 auto;
-    margin-bottom: 50px;
-    padding: 15px;
-    display: flex;
-  }
-
-  /* Columns */
-  .left-column {
-    width: 65%;
-    position: relative;
-  }
-
-  .right-column {
-    width: 35%;
-    margin-top: 60px;
-  }
-
-  /* Left Column */
-  .left-column img {
-    width: 100%;
-    /* Set the width to 100% */
-    height: auto;
-    /* Maintain the aspect ratio */
-    max-width: 700px;
-    /* Set a maximum width if needed */
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-    transition: all 0.3s ease;
-  }
-
-  .left-column img.active {
-    opacity: 1;
-  }
-
-  /* Right Column */
-
-  /* Product Description */
-  .product-description {
-    border-bottom: 1px solid #e1e8ee;
-    margin-bottom: 20px;
-  }
-
-  .product-description span,
-  .product-description span a {
-    font-size: 12px;
-    color: #358ed7;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-
-  .product-description h1 {
-    font-weight: 300;
-    font-size: 52px;
-    color: #43484d;
-    letter-spacing: -2px;
-  }
-
-  .product-description p {
-    font-size: 16px;
-    font-weight: 300;
-    color: #86939e;
-    line-height: 24px;
-  }
-
-  /* Product Price */
-  .product-price {
-    display: flex;
-    align-items: center;
-  }
-
-  .product-price span {
-    font-size: 18px;
-    font-weight: 300;
-    color: #43474d;
-    margin-right: 20px;
-    margin-left: 10px;
-  }
-
-  .cart-btn {
-    margin-top: 10px;
-    display: inline-block;
-    background-color: #0891b2;
-    border-radius: 6px;
-    font-size: 16px;
-    color: #ffffff;
-    text-decoration: none;
-    padding: 12px 30px;
-    transition: all 0.5s;
-  }
-
-  .cart-btn:hover {
-    background-color: #0891b2;
-  }
-
-  .left-column,
-  .right-column {
-    margin-right: 5px;
-    margin-left: 5px;
-  }
-
-  /* Responsive */
-
-  /* Laptop / Desktops */
-  @media (min-width: 941px) {
-    .paddinglol {
-      padding: 300px;
-    }
-  }
-
-  /* mobiles */
-  @media (max-width: 940px) {
-    .container {
-      flex-direction: column;
-    }
-
-    .left-column,
-    .right-column {
-      width: 100%;
-    }
-
-    .left-column img {
-      width: 300px;
-      right: 0;
-      top: 50px;
-      left: initial;
-    }
-  }
-
-  @media (max-width: 535px) {
-    .left-column img {
-      width: 220px;
-      top: 50px;
-    }
-  }
-
-  .wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-
-  .comment{
-    background: #f5f5f5;
-    padding: 2rem;
-    max-width: 670px;
-    width: 100%;
-    border-radius: .75rem;
-    
-  }
-  .comment h3{
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-bottom: 1rem;
-  }
-
-  textarea{
-    width: 95%;
-    background: white;
-    padding: 1rem;
-    border-radius: .5rem;
-    border: none;
-    outline: none;
-    resize: none;
-    margin-bottom: .5rem;
-  }
-
-  .btn-group{
-    display: flex;
-    grid-gap: .5rem;
-    align-items: center;
-  }
-
-  .btn-group .btn{
-    padding: .75rem 1rem;
-    border-radius: .5rem;
-    border: none;
-    outline: none;
-    font-size: .875rem;
-    font-weight: 500;
-  }
-
-  .btn-group .btn-submit{
-    background: #0891b2;
-    color: white;
-  }
-  
-  .btn-group .btn-submit:hover{
-    background: #066d87;
-    color: rgb(208, 206, 206);
-    cursor: pointer;
-  }
-
-  .btn-group .btn-cancel{
-    color: #0891b2;
-    background: white;
-  }
-
-  .btn-group .btn-cancel:hover{
-    background: rgb(208, 206, 206);
-    color: #066d87;
-    cursor: pointer;
-  }
-</style>
-
-<body>
-  <%- navbar %>
-
-    <!--<div class="container">
-      <div class="small-container single-product">
-        <div class="row">
-          <div class="col-2">
-            <img
-              src="<%= product.image %>"
-              alt="<%= product.image %>"
-              class="product_image"
-            />
-            <div class="col-2">
-              <h1><%= product.name %></h1>
-              <h4>$<%= product.price %></h4>
-
-              <a class="btn" onclick="addToCart('<%= product.name %>')"
-                >Add to Cart</a
-              >
-              <h3>Product Details</h3>
-              <p><%= product.description %></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="../css/styles.css" />
+  </head>
+  <link rel="stylesheet" href="../css/productinfo.css" />
+  <body>
+    <%- navbar %>
 
     <section class="container_info">
-      <!-- Left Column / Headphones Image -->
+      <!-- Left Column / Image -->
       <div class="left-column">
-        <img data-image="og_image" class="active" src="<%- product.image %>" alt=""
-          style="width: 60%; height: 440px; padding-top: 40px;" />
+        <img
+          data-image="og_image"
+          class="active"
+          src="<%- product.image %>"
+          alt=""
+          style="width: 60%; height: 440px; padding-top: 40px"
+        />
       </div>
 
       <div class="right-column">
         <div class="product-description">
           <span>
-            <a href="/<%- product.type %>" style="display: inline"><%- product.type %></a>
-            /
-            <a href="/<%- product.type %>/<%- product.category %>" style="display: inline"><%- product.category %></a>
+            <a href="/shop/<%- product.category %>" style="display: inline"
+              ><%- product.category %></a
+            >
             / <%- product.name %>
           </span>
           <h1><%- product.name %></h1>
@@ -321,7 +48,11 @@
 
         <div class="product-configuration">
           <div class="product-price">
-            <a href="/" class="cart-btn" onclick="addToCart('<%= product.name %>')">
+            <a
+              href="/"
+              class="cart-btn"
+              onclick="addToCart('<%= product.name %>')"
+            >
               Add to Cart
             </a>
           </div>
@@ -332,14 +63,81 @@
     <div class="wrapper">
       <div class="comment">
         <h3>Review this product</h3>
-        <textarea name="opinion" cols="30" rows="7" placeholder="Share your thoughts with other customers"></textarea>
+        <textarea
+          name="opinion"
+          cols="30"
+          rows="7"
+          placeholder="Share your thoughts with other customers"
+        ></textarea>
         <div class="btn-group">
           <button type="submit" class="btn btn-submit">Submit</button>
           <button class="btn btn-cancel">Cancel</button>
         </div>
       </div>
-
     </div>
-</body>
-
+    <script>
+      // handle comments
+      document
+        .querySelector(".btn-submit")
+        .addEventListener("click", function () {
+          // Retrieve comment text
+          var commentText = document.querySelector(
+            "textarea[name='opinion']"
+          ).value;
+          // Retrieve product name
+          var productName = "<%- product.name %>";
+          // Send POST request to add comment
+          fetch("/api/comment/add", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              comment: commentText,
+              productName: productName,
+            }),
+          })
+            .then((response) => {
+              console.log(response);
+              if (response.ok) {
+                alert("Comment added successfully!");
+                document.querySelector("textarea[name='opinion']").value = "";
+              } else if (response.status === 501) {
+                alert("you need to login first");
+              } else {
+                alert("Failed to add comment.");
+              }
+            })
+            .catch((error) => {
+              console.error("Error adding comment:", error);
+            });
+        });
+      // add to cart
+      function addToCart(productName) {
+        fetch("/api/cart/update", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            quantity: 1,
+            productName: productName,
+          }),
+        })
+          .then((response) => {
+            console.log(response);
+            if (response.ok) {
+              alert("Product added to cart successfully!");
+            } else if (response.status === 501) {
+              alert("you need to login first");
+            } else {
+              alert("Failed to add product to cart.");
+            }
+          })
+          .catch((error) => {
+            console.error("Error adding product to cart:", error);
+          });
+      }
+    </script>
+  </body>
 </html>
